--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "mocha ./**/**/*.spec.js --exit",
+    "test:coverage": "nyc --include='src/**/*.js' npm run test",
+    "jest:test": "jest --watch"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.18.1",
-    "eslint-config-trybe-backend": "1.0.3"
+    "axios": "^0.27.2",
+    "express": "^4.18.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-trybe-backend": "1.0.3",
     "eslint-plugin-import": "2.22.1",
-    "jest": "^26.0.1",
-    "nodemon": "^2.0.13"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.13",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0"
   }
 }
